--- a/images/images/index.html
+++ b/images/images/index.html
@@ -13,11 +13,31 @@
 </head>
 <body>
     <div class="Landing">
-     <div class="Landing_section">
-       Курт 
+     <div class="Landing_section Landing_section_blue">
+       <div class="Section Section_p-56">
+        <div class="Section_header">
+          <div class="Header_logo">
+               <img src="images/images/images.png">
+          </div>
+          <div class="Header_menu">
+         Меню
+          </div>
+        </div>
+       </div>
      </div>
      <div class="Landing_section">
-       Кобейн
+      <div class="Section Section_p-72">
+        <div class="Section_title">
+       Информация
+        </div>
+      </div> 
+     </div>
+     <div class="Landing_section">
+       <div class="Section Sectio_p-72">
+         <div class="Section_title">
+         Список
+         </div>
+       </div>
      </div>
     </div>
 </body>
